--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ext/tinyobjloader"]
 	path = ext/tinyobjloader
 	url = git@github.com:syoyo/tinyobjloader.git
+[submodule "ext/glm"]
+	path = ext/glm
+	url = git@github.com:g-truc/glm.git
