fix grouped triangle primitive intersection

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,4 +1,6 @@
 
+add_definitions(-DEXRDISPLAY_PATH="${GRAPHICS_LIBS_PREFIX}/bin/exrdisplay")
+
 add_executable(load_obj load_obj.cc)
 target_link_libraries(load_obj 
   ae_graphics 
@@ -16,6 +18,11 @@ target_link_libraries(depth_trace
   IlmImf-2_2)
 
 add_test(
+  NAME load_square_obj
+  COMMAND build/test/load_obj objs/square.obj
+  WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})
+
+add_test(
   NAME load_bunny_obj
   COMMAND build/test/load_obj objs/bunny.obj
   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})
@@ -26,6 +33,11 @@ add_test(
   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})
 
 add_test(
+  NAME bvh_sah_build_square
+  COMMAND build/test/tree_build objs/square.obj 
+  WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})
+
+add_test(
   NAME bvh_sah_build_bunny 
   COMMAND build/test/tree_build objs/bunny.obj 
   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})
@@ -33,6 +45,11 @@ add_test(
 add_test(
   NAME bvh_sah_build_dragon 
   COMMAND build/test/tree_build objs/dragon.obj 
+  WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})
+
+add_test(
+  NAME depth_trace_square 
+  COMMAND build/test/depth_trace objs/square.obj 
   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})
 
 add_test(
